# QC-DMET

./: .gitignore  LICENSE  README.md  test1.py  test2.py  test3.py  test4.py  test5.py  test5bis.py  test6.py  test7.py
examples/: beryllium.py  diels_alder_structures.py  emft_reaction.py  hubbard.py  hydrogen.py  polyyne.py  sn2.py  sn2_bis.py  sn2_reaction.py  sn2_struct.py  sn2_struct_bis.py  sn2_structures.py
lib/: CMakeLists.txt  rhf_response.cc
paper/: beryllium.py  beryllium_umat.py.old  hubbard.py  hydrogen.py  polyyne.py  sn2_reaction.py  sn2_structures.py
src/: chemps2.py  dmet.py  iao_helper.py  line_min.py  localintegrals.py  localintegrals_hubbard.py  psi4cc.py  pyscf_cc.py  pyscf_mp2.py  pyscf_rhf.py  qcdmet_paths.py  qcdmethelper.py  rhf.py  ringhelper.py  solver.py
tests/: test1.py  test10.py  test11.py  test11fc.py  test12.py  test12b.py  test12c.py  test13.py  test2.py  test3.py  test4.py  test5.py  test5bis.py  test6.py  test6bis.py  test7.py  test8.py  test8a.py  test8b.py  test9a.py  test9b.py  test9c.py  test9d.py  test9e.py  test9f.py
